--- a/index.html
+++ b/index.html
@@ -2,57 +2,13 @@
 <html>
    <head>
       <meta charset = "UTF-8">
-      <title>Tic-Tac-Toe</title>
-      <style>
-         td {
-            border: 2px solid black;
-            height: 150px;
-            width: 150px;
-            text-align: center;
-            font-size: 70px;
-         }
-         table {
-            border-collapse: collapse;
-            position: absolute;
-            left: 50%;
-            margin-left: -205px;
-            top: 50px;
-         }
-         table tr:first-child td {
-            border-top: 0;
-         }
-         table tr:last-child td {
-            border-bottom: 0;
-         }
-         table tr td:first-child {
-            border-left: 0;
-         }
-         table tr td:last-child {
-            border-right: 0;
-         }
-         .endGame {
-            display: none;
-            width: 300px;
-            top: 170px;
-            background-color: orange;
-            position: absolute;
-            left: 50%;
-            margin-left: -120px;
-            padding-top: 100px;
-            padding-bottom: 100px;
-            text-align: center;
-            border-radius: 5px;
-            color: black;
-            font-size: 2em;
-            opacity: 0.8;
-         }
-      </style>
+      <title>Tic-Tac-Toe</title>      
       <link rel = "stylesheet" 
          href = "./bower_components/bootstrap/dist/css/bootstrap.min.css" />
+      <link rel = "stylesheet" href = "style.css" />
    </head>
-   
    <body>
-      <div class = "container">
+      <div class = "container">         
          <table>
             <tr>
                <td class="kotak" id="0"></td>
@@ -73,8 +29,8 @@
          <div class = "endGame">
             <div class = "text"></div>
             <button class = "btn btn-success" id = "playbtn" onclick = "startGame()"> Replay </button>           
-         </div>
-         <script src = "./game.js" ></script>         
+         </div>                  
       </div>
+      <script src = "./game.js" ></script>
    </body>
 </html>
